# ZPlayer

./: .gitignore  README.md
projects/Android/: .gitignore  build.gradle  settings.gradle
projects/Android/app/: build.gradle
projects/Android/app/src/androidTest/java/com/tkmk/sdk/playerapp/: ExampleInstrumentedTest.java
projects/Android/app/src/androidTest/java/vip/someone/sdk/playerapp/: PlayerBaseTest.kt
projects/Android/app/src/main/: AndroidManifest.xml
projects/Android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
projects/Android/app/src/main/java/com/tkmk/sdk/playerapp/: MainActivity.kt  VideoActivity.kt
projects/Android/app/src/main/java/com/tkmk/sdk/playerapp/ui/theme/: Color.kt  Shape.kt  Theme.kt
projects/Android/app/src/main/java/com/tkmk/sdk/playerapp/util/: HardwareInfoUtils.kt
projects/Android/app/src/main/java/vip/someone/sdk/playerapp/: MainActivity.kt  VideoActivity.kt
projects/Android/app/src/main/java/vip/someone/sdk/playerapp/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
projects/Android/app/src/main/java/vip/someone/sdk/playerapp/util/: HardwareInfoUtils.kt
projects/Android/app/src/main/res/layout/: activity_video.xml
projects/Android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
projects/Android/app/src/main/res/values-night/: themes.xml
projects/Android/app/src/test/java/com/tkmk/sdk/playerapp/: ExampleUnitTest.java
projects/Android/app/src/test/java/vip/someone/sdk/playerapp/: ExampleUnitTest.java
projects/Android/gradle/wrapper/: gradle-wrapper.properties
projects/Android/sdk/: build.gradle
projects/Android/sdk/src/main/cpp/: CMakeLists.txt  player_sdk.cpp
projects/Android/sdk/src/main/java/tv/danmaku/ijk/media/player/: IjkMediaPlayer.java  PlayerQosInfo.java
projects/Android/sdk/src/main/java/tv/danmaku/ijk/media/player/widget/: AbstractPlayerView.java  IJKMeasureHelper.java  IJKSurfaceRenderView.java  IjkVideoView.java
projects/Qt/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  player_controller.cpp  player_controller.h  video_gl_widget.cpp  video_gl_widget.h
projects/Qt/IJKMediaPlayer/: ijkplayer_controller.cc  ijkplayer_controller.h  ijkplayer_qt.h
projects/Qt/PlayerDemo/: Info.plist.in  mainwindow.cpp  mainwindow.h  mainwindow.ui
projects/Qt/ZPlayer/: player_controller.cpp  player_controller.h  video_gl_widget.cpp  video_gl_widget.h  zplayer_global.h
projects/android/: settings.gradle
projects/android/app/: build.gradle
projects/android/app/src/main/assets/: license.crt
projects/android/app/src/main/java/com/tkmk/sdk/playerapp/ui/theme/: Type.kt
projects/android/sdk/: build.gradle
projects/android/sdk/src/main/java/tv/danmaku/ijk/media/player/widget/: AliyunRenderView.java  IRenderView.java  IjkVideoView.java  SurfaceRenderView.java  TextureRenderView.java
projects/iOS/IJKMediaDemo/IJKMediaDemo.xcodeproj/: project.pbxproj
projects/iOS/IJKMediaDemo/IJKMediaDemo.xcodeproj/project.xcworkspace/xcuserdata/chenxiangyu.xcuserdatad/: UserInterfaceState.xcuserstate
projects/iOS/IJKMediaPlayer/IJKMediaPlayer/: IJKFFMoviePlayerController.m
projects/iOS/IJKMediaPlayer/IJKMediaPlayer.xcodeproj/: project.pbxproj
projects/iOS/IJKMediaPlayer/IJKMediaPlayer/ijkmedia/ijkplayer/ios/: ijkplayer_ios.m
projects/iOS/IJKMediaPlayer/IJKMediaPlayer/ijkmedia/ijkplayer/ios/pipeline/: IJKVideoToolBoxAsync.m  IJKVideoToolBoxSync.m
src/: CMakeLists.txt  zplayer_core.cmake
src/core/: zplayer.cc  zplayer.h
src/ijkmedia/ijkplayer/: config.h  ff_ffmsg_queue.h  ff_ffplay.c  ff_ffplay.h  ff_ffplay_def.h  ijkplayer.c
src/ijkmedia/ijkplayer/android/: ijkplayer_jni.c
src/ijkmedia/ijkplayer/android/pipeline/: ffpipenode_android_mediacodec_vdec.c
src/ijkmedia/ijkplayer/ijkavformat/: allformats.c  ijkasync.c  ijkio.c  ijkiomanager.c  ijkiomanager.h
src/ijkmedia/ijkplayer/ijkavutil/: ijkdict.c  ijkdict.h
src/ijkmedia/ijkplayer/qt/: ijkplayer_qt.c  ijkplayer_qt.h
src/ijkmedia/ijkplayer/qt/pipeline/: ffpipeline_qt.c  ffpipeline_qt.h
src/ijkmedia/ijksdl/: ijksdl_aout_internal.h  ijksdl_mutex.h  ijksdl_vout_internal.h
src/ijkmedia/ijksdl/android/: android_nativewindow.c  ijksdl_android_jni.c  ijksdl_aout_android_audiotrack.c  ijksdl_aout_android_opensles.c  ijksdl_codec_android_mediadef.h
src/ijkmedia/ijksdl/qt/: ijksdl_aout_qt.cc  ijksdl_aout_qt.h  ijksdl_thread_qt.c  ijksdl_vout_qt.cc  ijksdl_vout_qt.h
src/ijkmedia/ijksoundtouch/source/Android-lib/: AndroidManifest.xml
tools/: player_analysis.py
